--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "redux-simple-starter",
-  "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
-  "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "name": "rdf2html",
+  "version": "0.0.0",
+  "description": "A javascript library to visualize an array of RDF triples into an HTML page",
+  "main": "rdf2html.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "gulp dist"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tdt/rdf2html.git"
   },
+  "keywords": [
+    "rdf",
+    "visualizer",
+    "triples",
+    "linked open data"
+  ],
+  "author": "Pieter Colpaert",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "gitHead": "c6e4aea336e3f2a83a3f7acc06648a598aaf190e",
   "dependencies": {
-    "babel-preset-stage-1": "^6.1.18",
-    "bootstrap": "^4.0.0",
-    "lodash": "^3.10.1",
-    "react": "^0.14.9",
-    "react-dom": "^0.14.9",
-    "react-redux": "4.3.0",
-    "react-router": "^2.0.1",
-    "reactstrap": "^5.0.0-beta.2",
-    "redux": "^3.0.4"
+    "jquery": "~2.1.0",
+    "leaflet": "0.7.5",
+    "n3": "^0.4.5",
+    "wkx": "^0.2.0",
+    "browserify": "^11.2.0",
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.6",
+    "run-sequence": "^1.1.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "watchify": "^3.4.0"
   }
 }
