--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-fuseki</artifactId>
+			<version>3.6.0</version>
+			<!--<type>pom</type>-->
+			<!--<scope>test</scope>-->
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>2.12.0</version>
