--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,36 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+fuseki/run/backups/
+fuseki/run/configuration/
+fuseki/run/databases/
+fuseki/run/logs/
+fuseki/run/system/tdb.lock
+fuseki/run/system_files/
+fuseki/tdb/GOSP.dat
+fuseki/tdb/GOSP.idn
+fuseki/tdb/GPOS.dat
+fuseki/tdb/GPOS.idn
+fuseki/tdb/GSPO.dat
+fuseki/tdb/GSPO.idn
+fuseki/tdb/OSP.dat
+fuseki/tdb/OSP.idn
+fuseki/tdb/OSPG.dat
+fuseki/tdb/OSPG.idn
+fuseki/tdb/POS.dat
+fuseki/tdb/POS.idn
+fuseki/tdb/POSG.dat
+fuseki/tdb/POSG.idn
+fuseki/tdb/SPO.dat
+fuseki/tdb/SPO.idn
+fuseki/tdb/SPOG.dat
+fuseki/tdb/SPOG.idn
+fuseki/tdb/journal.jrnl
+fuseki/tdb/node2id.dat
+fuseki/tdb/node2id.idn
+fuseki/tdb/nodes.dat
+fuseki/tdb/prefix2id.dat
+fuseki/tdb/prefix2id.idn
+fuseki/tdb/prefixIdx.dat
+fuseki/tdb/prefixIdx.idn
+fuseki/tdb/prefixes.dat
